# api_gateway/api/proto/yamarket_service_pb2.py
@@ -1,0 +1,46 @@
+# -*- coding: utf-8 -*-
+# Generated by the protocol buffer compiler.  DO NOT EDIT!
+# NO CHECKED-IN PROTOBUF GENCODE
+# source: yamarket_service.proto
+# Protobuf Python Version: 5.29.0
+"""Generated protocol buffer code."""
+from google.protobuf import descriptor as _descriptor
+from google.protobuf import descriptor_pool as _descriptor_pool
+from google.protobuf import runtime_version as _runtime_version
+from google.protobuf import symbol_database as _symbol_database
+from google.protobuf.internal import builder as _builder
+_runtime_version.ValidateProtobufRuntimeVersion(
+    _runtime_version.Domain.PUBLIC,
+    5,
+    29,
+    0,
+    '',
+    'yamarket_service.proto'
+)
+# @@protoc_insertion_point(imports)
+
+_sym_db = _symbol_database.Default()
+
+
+
+
+DESCRIPTOR = _descriptor_pool.Default().AddSerializedFile(b'\n\x16yamarket_service.proto\x12\x08yamarket\"9\n\rSearchRequest\x12\x0c\n\x04text\x18\x01 \x01(\t\x12\x0b\n\x03num\x18\x02 \x01(\x05\x12\r\n\x05order\x18\x03 \x01(\t\";\n\x0f\x43\x61tegoryRequest\x12\x0c\n\x04link\x18\x01 \x01(\t\x12\x0b\n\x03num\x18\x02 \x01(\x05\x12\r\n\x05order\x18\x03 \x01(\t\"9\n\rSellerRequest\x12\x0c\n\x04link\x18\x01 \x01(\t\x12\x0b\n\x03num\x18\x02 \x01(\x05\x12\r\n\x05order\x18\x03 \x01(\t\"\x8a\x01\n\x0fProductResponse\x12\x12\n\nproduct_id\x18\x01 \x01(\x05\x12\x0c\n\x04name\x18\x02 \x01(\t\x12\r\n\x05\x62rand\x18\x03 \x01(\t\x12\r\n\x05price\x18\x04 \x01(\x05\x12\x16\n\x0e\x64iscount_price\x18\x05 \x01(\x05\x12\x0e\n\x06rating\x18\x06 \x01(\x02\x12\x0f\n\x07reviews\x18\x07 \x01(\x05\"P\n\x13ListProductResponse\x12\x10\n\x08\x66ilename\x18\x01 \x01(\t\x12\'\n\x04\x64\x61ta\x18\x02 \x03(\x0b\x32\x19.yamarket.ProductResponse2\xdb\x01\n\x0fYamarketService\x12@\n\x06search\x12\x17.yamarket.SearchRequest\x1a\x1d.yamarket.ListProductResponse\x12\x44\n\x08\x63\x61tegory\x12\x19.yamarket.CategoryRequest\x1a\x1d.yamarket.ListProductResponse\x12@\n\x06seller\x12\x17.yamarket.SellerRequest\x1a\x1d.yamarket.ListProductResponseb\x06proto3')
+
+_globals = globals()
+_builder.BuildMessageAndEnumDescriptors(DESCRIPTOR, _globals)
+_builder.BuildTopDescriptorsAndMessages(DESCRIPTOR, 'yamarket_service_pb2', _globals)
+if not _descriptor._USE_C_DESCRIPTORS:
+  DESCRIPTOR._loaded_options = None
+  _globals['_SEARCHREQUEST']._serialized_start=36
+  _globals['_SEARCHREQUEST']._serialized_end=93
+  _globals['_CATEGORYREQUEST']._serialized_start=95
+  _globals['_CATEGORYREQUEST']._serialized_end=154
+  _globals['_SELLERREQUEST']._serialized_start=156
+  _globals['_SELLERREQUEST']._serialized_end=213
+  _globals['_PRODUCTRESPONSE']._serialized_start=216
+  _globals['_PRODUCTRESPONSE']._serialized_end=354
+  _globals['_LISTPRODUCTRESPONSE']._serialized_start=356
+  _globals['_LISTPRODUCTRESPONSE']._serialized_end=436
+  _globals['_YAMARKETSERVICE']._serialized_start=439
+  _globals['_YAMARKETSERVICE']._serialized_end=658
+# @@protoc_insertion_point(module_scope)
