# yamarket_service/api/proto/yamarket_service_pb2_grpc.py
@@ -1,0 +1,183 @@
+# Generated by the gRPC Python protocol compiler plugin. DO NOT EDIT!
+"""Client and server classes corresponding to protobuf-defined services."""
+import grpc
+import warnings
+
+import api.proto.yamarket_service_pb2 as yamarket__service__pb2
+
+GRPC_GENERATED_VERSION = '1.71.0'
+GRPC_VERSION = grpc.__version__
+_version_not_supported = False
+
+try:
+    from grpc._utilities import first_version_is_lower
+    _version_not_supported = first_version_is_lower(GRPC_VERSION, GRPC_GENERATED_VERSION)
+except ImportError:
+    _version_not_supported = True
+
+if _version_not_supported:
+    raise RuntimeError(
+        f'The grpc package installed is at version {GRPC_VERSION},'
+        + f' but the generated code in yamarket_service_pb2_grpc.py depends on'
+        + f' grpcio>={GRPC_GENERATED_VERSION}.'
+        + f' Please upgrade your grpc module to grpcio>={GRPC_GENERATED_VERSION}'
+        + f' or downgrade your generated code using grpcio-tools<={GRPC_VERSION}.'
+    )
+
+
+class YamarketServiceStub(object):
+    """Missing associated documentation comment in .proto file."""
+
+    def __init__(self, channel):
+        """Constructor.
+
+        Args:
+            channel: A grpc.Channel.
+        """
+        self.search = channel.unary_unary(
+                '/yamarket.YamarketService/search',
+                request_serializer=yamarket__service__pb2.SearchRequest.SerializeToString,
+                response_deserializer=yamarket__service__pb2.ListProductResponse.FromString,
+                _registered_method=True)
+        self.category = channel.unary_unary(
+                '/yamarket.YamarketService/category',
+                request_serializer=yamarket__service__pb2.CategoryRequest.SerializeToString,
+                response_deserializer=yamarket__service__pb2.ListProductResponse.FromString,
+                _registered_method=True)
+        self.seller = channel.unary_unary(
+                '/yamarket.YamarketService/seller',
+                request_serializer=yamarket__service__pb2.SellerRequest.SerializeToString,
+                response_deserializer=yamarket__service__pb2.ListProductResponse.FromString,
+                _registered_method=True)
+
+
+class YamarketServiceServicer(object):
+    """Missing associated documentation comment in .proto file."""
+
+    def search(self, request, context):
+        """Missing associated documentation comment in .proto file."""
+        context.set_code(grpc.StatusCode.UNIMPLEMENTED)
+        context.set_details('Method not implemented!')
+        raise NotImplementedError('Method not implemented!')
+
+    def category(self, request, context):
+        """Missing associated documentation comment in .proto file."""
+        context.set_code(grpc.StatusCode.UNIMPLEMENTED)
+        context.set_details('Method not implemented!')
+        raise NotImplementedError('Method not implemented!')
+
+    def seller(self, request, context):
+        """Missing associated documentation comment in .proto file."""
+        context.set_code(grpc.StatusCode.UNIMPLEMENTED)
+        context.set_details('Method not implemented!')
+        raise NotImplementedError('Method not implemented!')
+
+
+def add_YamarketServiceServicer_to_server(servicer, server):
+    rpc_method_handlers = {
+            'search': grpc.unary_unary_rpc_method_handler(
+                    servicer.search,
+                    request_deserializer=yamarket__service__pb2.SearchRequest.FromString,
+                    response_serializer=yamarket__service__pb2.ListProductResponse.SerializeToString,
+            ),
+            'category': grpc.unary_unary_rpc_method_handler(
+                    servicer.category,
+                    request_deserializer=yamarket__service__pb2.CategoryRequest.FromString,
+                    response_serializer=yamarket__service__pb2.ListProductResponse.SerializeToString,
+            ),
+            'seller': grpc.unary_unary_rpc_method_handler(
+                    servicer.seller,
+                    request_deserializer=yamarket__service__pb2.SellerRequest.FromString,
+                    response_serializer=yamarket__service__pb2.ListProductResponse.SerializeToString,
+            ),
+    }
+    generic_handler = grpc.method_handlers_generic_handler(
+            'yamarket.YamarketService', rpc_method_handlers)
+    server.add_generic_rpc_handlers((generic_handler,))
+    server.add_registered_method_handlers('yamarket.YamarketService', rpc_method_handlers)
+
+
+ # This class is part of an EXPERIMENTAL API.
+class YamarketService(object):
+    """Missing associated documentation comment in .proto file."""
+
+    @staticmethod
+    def search(request,
+            target,
+            options=(),
+            channel_credentials=None,
+            call_credentials=None,
+            insecure=False,
+            compression=None,
+            wait_for_ready=None,
+            timeout=None,
+            metadata=None):
+        return grpc.experimental.unary_unary(
+            request,
+            target,
+            '/yamarket.YamarketService/search',
+            yamarket__service__pb2.SearchRequest.SerializeToString,
+            yamarket__service__pb2.ListProductResponse.FromString,
+            options,
+            channel_credentials,
+            insecure,
+            call_credentials,
+            compression,
+            wait_for_ready,
+            timeout,
+            metadata,
+            _registered_method=True)
+
+    @staticmethod
+    def category(request,
+            target,
+            options=(),
+            channel_credentials=None,
+            call_credentials=None,
+            insecure=False,
+            compression=None,
+            wait_for_ready=None,
+            timeout=None,
+            metadata=None):
+        return grpc.experimental.unary_unary(
+            request,
+            target,
+            '/yamarket.YamarketService/category',
+            yamarket__service__pb2.CategoryRequest.SerializeToString,
+            yamarket__service__pb2.ListProductResponse.FromString,
+            options,
+            channel_credentials,
+            insecure,
+            call_credentials,
+            compression,
+            wait_for_ready,
+            timeout,
+            metadata,
+            _registered_method=True)
+
+    @staticmethod
+    def seller(request,
+            target,
+            options=(),
+            channel_credentials=None,
+            call_credentials=None,
+            insecure=False,
+            compression=None,
+            wait_for_ready=None,
+            timeout=None,
+            metadata=None):
+        return grpc.experimental.unary_unary(
+            request,
+            target,
+            '/yamarket.YamarketService/seller',
+            yamarket__service__pb2.SellerRequest.SerializeToString,
+            yamarket__service__pb2.ListProductResponse.FromString,
+            options,
+            channel_credentials,
+            insecure,
+            call_credentials,
+            compression,
+            wait_for_ready,
+            timeout,
+            metadata,
+            _registered_method=True)
